mType/tests/testFiles/lombok/error/setter_on_function_error.mt
// @Setter targets CLASS/FIELD only — applying it to a top-level function is a
// @Target violation.
@Setter
public function doIt(): void {
    print("hi");
}

doIt();
